clusters/um890/dns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-system
  labels:
    name: dns-system
    app.kubernetes.io/name: dns-system
