clusters/um890/dns/pihole-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: dns-system
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/component: dns-tcp
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.249
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app.kubernetes.io/name: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: dns-system
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/component: dns-udp
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.249
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app.kubernetes.io/name: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: dns-system
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/component: web
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.249
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: web
  selector:
    app.kubernetes.io/name: pihole
